--- a/index.Rmd
+++ b/index.Rmd
@@ -42,22 +42,21 @@ Please note that the **Exam** takes place on 03.06.2025, from	08.00 to 10.00, at
 | 8 | 29.04.2025 | Session 10: TBD | [pdf](index.html)  | Mata |
 | 9 | 06.05.2025 | Session 11: TBD | [pdf](index.html) | Mata |
 | 10 | 13.05.2025 | Session 12: TBD | [pdf](index.html)  | Mata |
-|11 | 20.05.2025 | Session 13: TBD | [pdf](index.html) | Mata |
+|11 | 20.05.2025 | Session 13: Wrap-up and Q&A | [pdf](index.html) | Mata |
 |12 | 03.06.2025 | Exam (DSBG Neubau) |  |  |
 |13 | 03.06.2025 | Repeat Exam (Biozentrum)|  |  |
 :::
 
 # What is this course about?
 
-This course aims to give a broad introduction to central topics in psychology, with a focus on mechanistic and pluralistic explanations of cognition. 
+This course aims to give a broad introduction to central topics in psychology, with a focus on motivation and emotion. 
 
 # What can you expect to learn?
 
 By completing the course you can expect to...
 
-- reflect about the need for mechanistic and pluralistic explanations in psychology
-- learn about central theories and models in key areas of psychology
-- become familiarized with common methods used in psychology
+- learn about central theories and models in key areas of the psychology of motivation and emotion
+- become familiarized with common methods used in the psychology of motivation and emotion
 - learn about examples of applications of psychology to real-world contexts
 
 # How should you use this website?
