--- a/index.Rmd
+++ b/index.Rmd
@@ -32,32 +32,34 @@ Please note that the **Exam** takes place on 03.06.2025, from	08.00 to 10.00, at
 ::: l-body
 | # | Date     | Topic                         | Slides | Instructor |
 |---| ---------|-------------------------------|--------| ------- |
-| 1 | 18.02.2025 | Session 1: Introduction | [pdf](index.html) | Mata |
-| 2 | 25.02.2025 | Session 2: TBD | [pdf](index.html) | Mata |
-| 3 | 18.03.2025 | Session 4: TBD | [pdf](index.html) | Mata |
-| 4 | 25.03.2025 | Session 5: TBD | [pdf](index.html) | Mata |
-| 5 | 01.04.2025 | Session 6: TBD | [pdf](index.html) | Mata |
-| 6 | 08.04.2025 | Session 7: TBD | [pdf](index.html) | Mata |
-| 7 | 15.04.2025 | Session 8: TBD | [pdf](index.html) | Mata |
-| 8 | 29.04.2025 | Session 10: TBD | [pdf](index.html)  | Mata |
-| 9 | 06.05.2025 | Session 11: TBD | [pdf](index.html) | Mata |
-| 10 | 13.05.2025 | Session 12: TBD | [pdf](index.html)  | Mata |
-|11 | 20.05.2025 | Session 13: Wrap-up and Q&A | [pdf](index.html) | Mata |
+| 1 | 18.02.2025 | Emotion: What is an emotion? | [pdf](presentations/KOGPSYII_session1.pdf) | Mata |
+| 2 | 25.02.2025 | Emotion: What is an emotion? (continued) |  | Mata |
+| 3 | 18.03.2025 | Emotion: Neural bases | | Tisdall |
+| 4 | 25.03.2025 | Emotion: Regulation | | Mata |
+| 5 | 01.04.2025 | Emotion: Well-being | | Mata |
+| 6 | 08.04.2025 | Motivation: What is motivation? |  | Mata |
+| 7 | 15.04.2025 | Motivation: Extrinsic vs intrinsic motivation |  | Mata |
+| 8 | 29.04.2025 | Motivation: Neural bases |   | Tisdall |
+| 9 | 06.05.2025 | Motivation: Cooperation and morality |  | Theisen |
+| 10 | 13.05.2025 | Applications |   | Mata |
+|11 | 20.05.2025 | Wrap-up and Q&A |  | Mata |
 |12 | 03.06.2025 | Exam (DSBG Neubau) |  |  |
 |13 | 03.06.2025 | Repeat Exam (Biozentrum)|  |  |
 :::
 
+*Note*. Slides will be made available shortly before each session.
+
 # What is this course about?
 
-This course aims to give a broad introduction to central topics in psychology, with a focus on motivation and emotion. 
+This course aims to give a broad introduction to central topics in psychology, with a focus on emotion and motivation. 
 
 # What can you expect to learn?
 
 By completing the course you can expect to...
 
-- learn about central theories and models in key areas of the psychology of motivation and emotion
-- become familiarized with common methods used in the psychology of motivation and emotion
-- learn about examples of applications of psychology to real-world contexts
+- learn about central theories and models concerning the psychology of emotion and motivation
+- become familiarized with common methods used in the psychology of emotion and motivation
+- learn about examples of applications of the psychology of emotion and motivation to real-world contexts
 
 # How should you use this website?
 
@@ -67,40 +69,40 @@ This website is designed to help course participants get an overview of the cour
 
 **Session 1**
 
-TBD
-
+Gross, J.J, & Barrett, L.F. (2011). Emotion generation and emotion regulation: One or two depends on your point of view. *Emotion Review, 3*, 8–16. https://journals.sagepub.com/doi/10.1177/1754073910380974 
 **Session 2**
 
-TBD
+De Waal, F. B. M., & Andrews, K. (2022). The question of animal emotions. *Science, 375*(6587), 1351–1352. https://doi.org/10.1126/science.abo2378
 
 **Session 3**
 
-TBD
+Lindquist, K. A., Wager, T. D., Kober, H., Bliss-Moreau, E., & Barrett, L. F. (2012). The brain basis of emotion: A meta-analytic review. *Behavioral and Brain Sciences, 35*(3), 121–143. https://doi.org/10.1017/S0140525X11000446
 
 **Session 4**
 
-TBD
+Gross, J. J. (2015). Emotion regulation: Current status and future prospects. *Psychological Inquiry, 26*(1), 1–26. https://doi.org/10.1080/1047840X.2014.940781
 
 **Session 5**
 
-TBD
+Tov, W., Wirtz, D., Kushlev, K., Biswas-Diener, R., Diener, E. (2022). Well-being science for teaching and the general public. *Perspectives in Psychological Science, 17*(5), 1452-1471. https://journals.sagepub.com/doi/10.1177/17456916211046946 
 
 **Session 6**
 
-TBD
+Heckhausen, H. (2008). Historical trends in motivation research. In J. Heckhausen & H. Heckhausen (Eds.), *Motivation and Action* (2nd ed., pp. 10–41). Cambridge University Press. https://doi.org/10.1017/CBO9780511499821.003
 
 **Session 7**
 
-TBD
+Ryan, R. M., & Deci, E. L. (2000). Self-determination theory and the facilitation of intrinsic motivation, social development, and well-being. *American Psychologist, 55*(1), 68-78. https://doi.org/10.1037/0003-066X.55.1.68 
 
 **Session 8**
 
-TBD
+Braver, T. S., Krug, M. K., Chiew, K. S., Kool, W., Westbrook, J. A., Clement, N. J., et al. (2014). Mechanisms of motivation-cognition interaction: Challenges and opportunities. *Cognitive, Affective, & Behavioral Neuroscience, 14*(2), 443–472. http://doi.org/10.3758/s13415-014-0300-0
 
 **Session 9**
 
-TBD
+Tomasello, M., & Vaish, A. (2013). Origins of human cooperation and morality. *Annual Review of Psychology, 64*(1), 231–255. https://doi.org/10.1146/annurev-psych-113011-143812
 
 **Session 10**
 
-TBD
+Duckworth, A. L., Milkman, K. L., & Laibson, D. (2018). Beyond willpower: Strategies for reducing failures of self-control. *Psychological Science in the Public Interest, 19*(3), 102–129. https://doi.org/10.1177/1529100618821893
+
