--- a/index.Rmd
+++ b/index.Rmd
@@ -33,7 +33,7 @@ Please note that the **Exam** takes place on 03.06.2025, from	08.00 to 10.00, at
 | # | Date     | Topic                         | Slides | Instructor |
 |---| ---------|-------------------------------|--------| ------- |
 | 1 | 18.02.2025 | Emotion: What is an emotion? | [pdf](presentations/KOGPSYII_session1.pdf) | Mata |
-| 2 | 25.02.2025 | Emotion: What is an emotion? (continued) |  | Mata |
+| 2 | 25.02.2025 | Emotion: What is an emotion? (continued) | [pdf](presentations/KOGPSYII_session2.pdf)  | Mata |
 | 3 | 18.03.2025 | Emotion: Neural bases | | Tisdall |
 | 4 | 25.03.2025 | Emotion: Regulation | | Mata |
 | 5 | 01.04.2025 | Emotion: Well-being | | Mata |
